@@ -1,6 +1,6 @@
 {#-
-    holocron/theme/templates/document-list.j2
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    holocron/theme/templates/index.j2
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     Template for rendering Holocron index pages.
 
