@@ -9,6 +9,7 @@ Here you can see the list of changes between each Holocron release.
 ==================
 
 - Changed Jinja2 templates extension from ``.html`` to ``.j2``.
+- Renamed ``document-list.j2`` template to ``index.j2``.
 
 
 0.3.0 (2016-03-12)
